<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="">
        <menu>
            <item
                android:id="@+id/item_nav_scan"
                android:icon="@drawable/baseline_qr_code_scanner_24"
                android:title="@string/scan" />

            <item
                android:id="@+id/item_nav_scan_image"
                android:icon="@drawable/wallpaper_fill0_wght400_grad0_opsz24"
                android:title="@string/sran_Image" />

            <item
                android:id="@+id/item_nav_add_qr_code"
                android:icon="@drawable/qr_code_2_add_fill0_wght400_grad0_opsz24"
                android:title="@string/generate_qr" />
            <item
                android:id="@+id/item_nav_history"
                android:icon="@drawable/history_fill0_wght400_grad0_opsz24"
                android:title="@string/history" />

            <item
                android:id="@+id/item_nav_setting"
                android:icon="@drawable/baseline_settings_24"
                android:title="@string/setting" />
        </menu>
    </item>


</menu>
